# cargo-edit-version

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs  manifest.rs
