[package]
name = "cargo-edit-version"
version = "0.1.0"
authors = ["Naoki Ikeguchi <root@siketyan.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.12.4"
thiserror = "1.0.23"
toml_edit = "0.2.0"
